Fix: Fix height on mobile to not scroll without scrollable content.

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,9 @@
 $color-feather-green: #58cc02;
 
+html {
+  height: 100dvh;
+}
+
 body {
   background-color: Canvas;
   color: CanvasText;
@@ -8,7 +12,6 @@ body {
 
 .app {
   color: white;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
